@@ -64,6 +64,7 @@ export(clone)
 export(commit)
 export(commits)
 export(config)
+export(config_find_global)
 export(content)
 export(contributions)
 export(cred_env)
